data/Java/03-visit-private/2/[M]Error.txt
https://stackoverflow.com/questions/28493652/error-private-access-in-class
MyClass.java:32: error: 'shift' has private access in 'ProductionWorker'
        if (shift == 2)
            ^